[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/entities/enemies/Goblin.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/levels/GameManager.gd" type="Script" id=4]
[ext_resource path="res://src/levels/TileSet.tres" type="TileSet" id=5]
[ext_resource path="res://src/entities/enemies/Eye.tscn" type="PackedScene" id=6]

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="Ground+FrontWalls" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -655339, 1, 65537, -655338, 1, 65537, -655337, 1, 65537, -655336, 1, 65537, -655335, 1, 65537, -655334, 1, 65537, -589803, 0, 65539, -589802, 0, 0, -589801, 0, 0, -589800, 0, 0, -589799, 0, 2, -589798, 0, 0, -524267, 0, 0, -524266, 0, 1, -524265, 0, 0, -524264, 0, 0, -524263, 0, 0, -524262, 0, 0, -458731, 0, 65538, -458730, 0, 0, -458729, 0, 0, -458728, 0, 0, -458727, 0, 0, -458726, 0, 0, -393195, 0, 0, -393194, 0, 0, -393193, 0, 0, -393192, 0, 1, -393191, 0, 0, -393190, 0, 2, -327659, 0, 0, -327658, 0, 3, -327657, 0, 0, -327656, 0, 0, -327655, 0, 0, -327654, 0, 0, -262121, 0, 0, -262120, 0, 65536, -196585, 0, 2, -196584, 0, 0, -131049, 0, 0, -131048, 0, 0, -65518, 1, 65537, -65517, 1, 65537, -65516, 1, 65537, -65515, 1, 65537, -65514, 1, 65538, -65513, 0, 0, -65512, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 65539, 1, 65537, 65540, 1, 65537, 65541, 1, 65537, 65542, 1, 65537, 65543, 1, 65537, 65544, 1, 65537, 65545, 1, 65537, 65546, 1, 65537, 65547, 1, 65537, 65554, 0, 0, 65555, 0, 2, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 65538, 131078, 0, 3, 131079, 0, 65538, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 2, 131090, 0, 2, 131091, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 65537, 196614, 0, 0, 196615, 0, 0, 196616, 0, 65539, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 1, 65536, 196621, 1, 65537, 196626, 0, 0, 196627, 0, 1, 262147, 0, 65539, 262148, 0, 0, 262149, 0, 0, 262150, 0, 65538, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 65539, 262155, 0, 0, 262156, 0, 0, 262157, 0, 65537, 262162, 0, 0, 262163, 0, 65539, 327683, 0, 65539, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 65538, 327688, 0, 2, 327689, 0, 0, 327690, 0, 2, 327691, 0, 3, 327692, 0, 0, 327693, 0, 0, 327698, 0, 65538, 327699, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 2, 393222, 0, 3, 393223, 0, 65538, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 65537, 393230, 1, 65536, 393231, 1, 65537, 393232, 1, 65537, 393233, 1, 65538, 393234, 0, 0, 393235, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 3, 458760, 0, 0, 458761, 0, 1, 458762, 0, 1, 458763, 0, 0, 458764, 0, 0, 458765, 0, 1, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 524291, 0, 0, 524292, 0, 65536, 524293, 0, 65537, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 1, 524305, 0, 2, 524306, 0, 0, 524307, 0, 0, 589827, 0, 3, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 65537, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 3, 589842, 0, 0, 589843, 0, 2, 655378, 0, 0, 655379, 0, 65539, 720914, 0, 0, 720915, 0, 0, 786450, 0, 0, 786451, 0, 0, 851986, 0, 0, 851987, 0, 65536, 917522, 0, 0, 917523, 0, 65539, 983058, 0, 0, 983059, 0, 0, 1048583, 1, 65537, 1048584, 1, 65537, 1048585, 1, 65537, 1048586, 1, 65537, 1048587, 1, 65537, 1048588, 1, 65537, 1048589, 1, 65537, 1048590, 1, 65537, 1048591, 1, 65537, 1048592, 1, 65537, 1048593, 1, 65538, 1048594, 0, 0, 1048595, 0, 0, 1048596, 1, 65536, 1048597, 1, 65537, 1048598, 1, 65537, 1048599, 1, 65537, 1048600, 1, 65537, 1048601, 1, 65537, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 3, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 65537, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 65539, 1179655, 0, 0, 1179656, 0, 65536, 1179657, 0, 0, 1179658, 0, 65536, 1179659, 0, 65536, 1179660, 0, 3, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 3, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 2, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 1, 1245195, 0, 0, 1245196, 0, 65537, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 2, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 65536, 1245203, 0, 2, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 1, 1310727, 0, 2, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 1, 1310736, 0, 0, 1310737, 0, 65536, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 2, 1310742, 0, 0, 1310743, 0, 3, 1310744, 0, 0, 1310745, 0, 0, 1376263, 0, 3, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 65539, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 65537, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 65538, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376281, 0, 0, 1376282, 1, 65536, 1376283, 1, 65537, 1441799, 0, 0, 1441800, 0, 3, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 65539, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441817, 0, 0, 1441818, 0, 0, 1441819, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 3, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 65539, 1507347, 0, 65538, 1507348, 0, 1, 1507349, 0, 0, 1507350, 0, 65539, 1507351, 0, 1, 1507352, 0, 0, 1507353, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1572871, 0, 65537, 1572872, 0, 1, 1572873, 0, 0, 1572874, 0, 0, 1572875, 0, 0, 1572876, 0, 0, 1572877, 0, 0, 1572878, 0, 3, 1572879, 0, 0, 1572880, 0, 0, 1572881, 0, 0, 1572882, 0, 0, 1572883, 0, 65537, 1572884, 0, 65539, 1572885, 0, 0, 1572886, 0, 0, 1572887, 0, 2, 1572888, 0, 65538, 1572889, 0, 0, 1572890, 0, 0, 1572891, 0, 0, 1638417, 0, 0, 1638418, 0, 0, 1638419, 0, 65539, 1638420, 0, 0, 1638421, 0, 65539 )

[node name="Entities" type="Node2D" parent="."]

[node name="Player" parent="Entities" instance=ExtResource( 2 )]
position = Vector2( 81.3649, 82.5172 )

[node name="Goblin" parent="Entities" instance=ExtResource( 3 )]
position = Vector2( 180.394, 119.488 )

[node name="Goblin2" parent="Entities" instance=ExtResource( 3 )]
position = Vector2( 388.516, 361.83 )

[node name="Goblin4" parent="Entities" instance=ExtResource( 3 )]
position = Vector2( 205.452, 329.919 )

[node name="Goblin5" parent="Entities" instance=ExtResource( 3 )]
position = Vector2( 219.229, 373.753 )

[node name="Goblin6" parent="Entities" instance=ExtResource( 3 )]
position = Vector2( 244.537, 346.564 )

[node name="Eye" parent="Entities" instance=ExtResource( 6 )]
position = Vector2( 169.704, 359.42 )

[node name="Eye2" parent="Entities" instance=ExtResource( 6 )]
position = Vector2( 121.748, 352.464 )

[node name="Eye3" parent="Entities" instance=ExtResource( 6 )]
position = Vector2( 145.45, 386.783 )

[node name="Eye4" parent="Entities" instance=ExtResource( 6 )]
position = Vector2( 420.691, 378.902 )

[node name="OtherTerrain" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -720876, 1, 3, -720875, 1, 1, -720874, 1, 1, -720873, 1, 1, -720872, 1, 1, -720871, 1, 1, -720870, 1, 1, -720869, 1, 4, -655340, 1, 65539, -655333, 1, 65540, -589804, 1, 65539, -589797, 1, 65540, -524268, 1, 65539, -524261, 1, 65540, -458732, 1, 65539, -458725, 1, 65540, -393196, 1, 65539, -393189, 1, 65540, -327660, 1, 65539, -327659, 1, 1, -327658, 1, 2, -327655, 1, 0, -327654, 1, 1, -327653, 1, 65540, -262124, 1, 131075, -262123, 1, 65537, -262122, 1, 196609, -262119, 1, 196608, -262118, 1, 65537, -262117, 1, 131076, -196586, 1, 65539, -196583, 1, 65540, -131055, 1, 3, -131054, 1, 1, -131053, 1, 1, -131052, 1, 1, -131051, 1, 1, -131050, 1, 196610, -131047, 1, 65540, -65519, 1, 65539, -65511, 1, 65540, 2, 1, 3, 3, 1, 1, 4, 1, 1, 5, 1, 1, 6, 1, 1, 7, 1, 1, 8, 1, 1, 9, 1, 1, 10, 1, 1, 11, 1, 1, 12, 1, 4, 17, 1, 65539, 25, 1, 65540, 65538, 1, 65539, 65548, 1, 65540, 65553, 1, 65539, 65556, 1, 0, 65557, 1, 1, 65558, 1, 1, 65559, 1, 1, 65560, 1, 1, 65561, 1, 65540, 131074, 1, 65539, 131084, 1, 196611, 131085, 1, 1, 131086, 1, 4, 131089, 1, 65539, 131092, 1, 196608, 131093, 1, 65537, 131094, 1, 65537, 131095, 1, 65537, 131096, 1, 65537, 131097, 1, 131076, 196610, 1, 65539, 196622, 1, 65540, 196625, 1, 65539, 196628, 1, 65540, 262146, 1, 65539, 262158, 1, 65540, 262161, 1, 65539, 262164, 1, 65540, 327682, 1, 65539, 327694, 1, 196611, 327695, 1, 1, 327696, 1, 1, 327697, 1, 196610, 327700, 1, 65540, 393218, 1, 65539, 393236, 1, 65540, 458754, 1, 65539, 458772, 1, 65540, 524290, 1, 65539, 524302, 1, 0, 524303, 1, 1, 524304, 1, 1, 524305, 1, 2, 524308, 1, 65540, 589826, 1, 65539, 589827, 1, 1, 589828, 1, 1, 589829, 1, 1, 589830, 1, 1, 589831, 1, 1, 589832, 1, 1, 589833, 1, 1, 589834, 1, 1, 589835, 1, 1, 589836, 1, 1, 589837, 1, 1, 589838, 1, 196608, 589839, 1, 65537, 589840, 1, 65537, 589841, 1, 196609, 589844, 1, 65540, 655362, 1, 131075, 655363, 1, 65537, 655364, 1, 65537, 655365, 1, 65537, 655366, 1, 65537, 655367, 1, 65537, 655368, 1, 65537, 655369, 1, 65537, 655370, 1, 65537, 655371, 1, 65537, 655372, 1, 65537, 655373, 1, 65537, 655374, 1, 131076, 655377, 1, 65539, 655380, 1, 65540, 720913, 1, 65539, 720916, 1, 65540, 786449, 1, 65539, 786452, 1, 65540, 851985, 1, 65539, 851988, 1, 65540, 917521, 1, 65539, 917524, 1, 65540, 983046, 1, 3, 983047, 1, 1, 983048, 1, 1, 983049, 1, 1, 983050, 1, 1, 983051, 1, 1, 983052, 1, 1, 983053, 1, 1, 983054, 1, 1, 983055, 1, 1, 983056, 1, 1, 983057, 1, 196610, 983060, 1, 196611, 983061, 1, 1, 983062, 1, 1, 983063, 1, 1, 983064, 1, 1, 983065, 1, 1, 983066, 1, 4, 1048582, 1, 65539, 1048602, 1, 65540, 1114118, 1, 65539, 1114138, 1, 65540, 1179654, 1, 65539, 1179674, 1, 65540, 1245190, 1, 65539, 1245210, 1, 65540, 1310726, 1, 65539, 1310746, 1, 196611, 1310747, 1, 1, 1310748, 1, 4, 1376262, 1, 65539, 1376284, 1, 65540, 1441798, 1, 65539, 1441820, 1, 65540, 1507334, 1, 65539, 1507356, 1, 65540, 1572870, 1, 65539, 1572871, 1, 1, 1572872, 1, 1, 1572873, 1, 1, 1572874, 1, 1, 1572875, 1, 1, 1572876, 1, 1, 1572877, 1, 1, 1572878, 1, 1, 1572879, 1, 1, 1572880, 1, 2, 1572886, 1, 0, 1572887, 1, 1, 1572888, 1, 1, 1572889, 1, 1, 1572890, 1, 1, 1572891, 1, 1, 1572892, 1, 65540, 1638406, 1, 131075, 1638407, 1, 65537, 1638408, 1, 65537, 1638409, 1, 65537, 1638410, 1, 65537, 1638411, 1, 65537, 1638412, 1, 65537, 1638413, 1, 65537, 1638414, 1, 65537, 1638415, 1, 65537, 1638416, 1, 196609, 1638417, 1, 1, 1638418, 1, 1, 1638419, 1, 1, 1638420, 1, 1, 1638421, 1, 1, 1638422, 1, 196608, 1638423, 1, 65537, 1638424, 1, 65537, 1638425, 1, 65537, 1638426, 1, 65537, 1638427, 1, 65537, 1638428, 1, 131076, 1703952, 1, 131075, 1703953, 1, 65537, 1703954, 1, 65537, 1703955, 1, 65537, 1703956, 1, 65537, 1703957, 1, 65537, 1703958, 1, 131076 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="PlayerHealthPlayer" type="AudioStreamPlayer" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="use_ability" from="." to="HUD" method="_on_GameManager_use_ability"]
[connection signal="health_changed" from="Entities/Player" to="." method="_on_Player_health_changed"]
[connection signal="use_ability" from="Entities/Player" to="." method="_on_Player_use_ability"]
[connection signal="use_ability" from="Entities/Player" to="HUD" method="_on_Player_use_ability"]
[connection signal="ability_ready" from="HUD" to="." method="_on_HUD_ability_ready"]
